fix: Remove padding adding extra space

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ html, body {
 body {
   display: grid;
   grid-template-rows: 1fr 75px 50px;
-  padding: 10px;
   gap: 10px;
   background-color: white;
 }
